# llvm

./: CMakeLists.txt  Makefile  configure
autoconf/: configure.ac
cmake/: config-ix.cmake
cmake/modules/: AddLLVM.cmake  HandleLLVMOptions.cmake  LLVMProcessSources.cmake  NewTarget.cmake  TableGen.cmake  VersionFromVCS.cmake
docs/: WritingAnLLVMPass.rst
include/llvm/: InitializePasses.h  LinkAllPasses.h  Pass.h  PassAnalysisSupport.h  PassManager.h  PassManagers.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Analysis/: CMakeLists.txt  RegionInfo.cpp  RegionPass.cpp  ScalarEvolution.cpp  ScalarEvolutionExpander.cpp  TargetTransformInfo.cpp  ValueTracking.cpp
lib/AsmParser/: LLParser.cpp
lib/CodeGen/: AggressiveAntiDepBreaker.cpp  BasicTargetTransformInfo.cpp  CMakeLists.txt  IntrinsicLowering.cpp  Passes.cpp  TargetLoweringBase.cpp
lib/IR/: CMakeLists.txt  DataLayout.cpp  Function.cpp  LegacyPassManager.cpp  Pass.cpp  PassManager.cpp  PrintModulePass.cpp  ValueTypes.cpp  Verifier.cpp
lib/LOF/: CMakeLists.txt  GreenTree.cpp  GreenTree.h  LLVMBuild.txt  LOF.cpp  LoopOpt.cpp  LoopOpt.h  LoopOptPass.cpp  LoopTree.cpp  LoopTree.h  RedTree.cpp  RedTree.h
lib/Option/: CMakeLists.txt
lib/Support/: CMakeLists.txt  GraphWriter.cpp  Host.cpp  MemoryBuffer.cpp
projects/sample/: configure
test/: CMakeLists.txt  lit.cfg.py
test/LOF/: loop_hierarchy_graph.ll  main.c  main.ll  main_if.c  main_if.ll  main_if_if.c  main_if_if.ll  main_ret.c  util.c
tools/: CMakeLists.txt  LLVMBuild.txt
tools/opt/: opt.cpp  (+2 more)
utils/: GenLibDeps.pl
utils/FileCheck/: CMakeLists.txt
(+137 files in other folders)
